fixed spacing between elements in left nav, expanded and closed

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -26,10 +26,11 @@ body {
 .sideNavItem:first-child {
 
     border-radius: 8px 8px 0 0;
-
+    padding-top: 14px;
 
 }
 
 .sideNavItem:last-child {
     border-radius: 0 0 8px 8px;
+    padding-bottom: 14px;
 }
